Testing with a different file structure

--- a/samples/file.html
+++ b/samples/file.html
@@ -12,7 +12,7 @@
 			Go ahead, start typing the name of a fruit (basic provider), the word
 			"super" (intermediate provider), or "@" (advanced provider).
 		</p>
-
+		clou
 		<!--
 			Ah, but here's an exception! The advanced provider is specifically disabled
 			within comments. Go head, type "@" inside this comment and notice that
